# One-Source-Multi-Use

./: .env.example  .gitignore  README.md  golden_keyword.py  keyword_research_다이어트_20260404_1929.csv  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  on-create.sh  post-start.sh
.github/workflows/: tests.yml
data/: content_db.csv  keyword_pool.csv
data/scenario_1/: content_db.csv  keyword_pool.csv
data/scenario_2/: content_db.csv  keyword_pool.csv
data/xlsx_demo/: osmu_workbook.xlsx
docs/: DEVELOPER_GUIDE.md
scripts/: backup_db.py  capture_tistory_cookie.py
src/osmu_kr/: __init__.py  checker.py  cli.py  config.py  config_manager.py  models.py  monitoring.py  notifications.py  publisher.py
src/osmu_kr/content_generator/: __init__.py  blueprint.py  blueprint_validator.py  collector.py  embedder.py  firecrawl_client.py  generator.py  images.py  interfaces.py  interpreter.py  keyword_classifier.py  keyword_context.py  keyword_translator.py  phase2.py  unsplash_client.py  writer.py
src/osmu_kr/evaluator/: __init__.py  base.py  factory.py  heuristic.py  naver_ads.py  naver_golden.py  naver_search_ad.py
src/osmu_kr/researcher/: __init__.py  alchemist.py  expander.py  housekeeping.py  keyword_safety.py  manager.py  recommender.py  (+2 more)
tests/: test_basic.py
ui/: __init__.py  app.py  requirements.txt  run_mac.command  run_windows.bat
ui/pages/: 1_🌱_키워드_생성.py  2_📦_키워드_풀.py  3_⭐_추천_및_선택.py  4_⚙️_설정.py  5_📜_로그_상태.py  6_📝_생성된_콘텐츠.py  7_검토_승인.py
ui/services/: __init__.py  activity_log.py  error_translator.py  researcher_service.py
(+11 files in other folders)
